Fix player image size (align with design)

--- a/src/scss/_playerCard.scss
+++ b/src/scss/_playerCard.scss
@@ -39,8 +39,11 @@
             margin: 0 $cardPadding;
             width: calc(100% - #{$cardPadding * 2});
             overflow: hidden;
+            display: flex;
+            justify-content: flax-start;
+            align-items: flex-end;
             .player_photo {
-                height: 100%;
+                height: 90%;
             }
         }
         .logo{
